# silver

./: .gitignore  CLAUDE.md  CMakeLists.txt  README  README.md  build.cmd  build.sh  clean.cmd  clean.sh  sampleinput.txt  test.cmd  test.sh  vcpkg.json
.claude/: settings.local.json
src/: CMakeLists.txt  ast.cpp  ast.h  codegen.cpp  codegen.h  common.h  main.cpp  optimizationpass.cpp  optimizationpass.h  parser.cpp  parser.h  symboltable.h  tokenizer.cpp  tokenizer.h  tokenmanager.cpp
src/ast/: ast.cpp  ast.h
src/codegen/: codegen.cpp  codegen.h
src/compiler/: CMakeLists.txt  common.h  logger.h  main.cpp  notes.txt  symboltable.h
src/compiler/ast/: ast.cpp  ast.h
src/compiler/codegen/: codegen.cpp  codegen.h
src/compiler/framework/: io.sl  math.sl
src/compiler/parser/: parser.cpp  parser.h  tokenizer.cpp  tokenizer.h  tokenmanager.cpp
src/compiler/passes/: analysispass.cpp  analysispass.h  hoistdeclarationpass.cpp  referencecounting.cpp  referencecounting.h  typeinferencepass.cpp
src/grammars/: lexer.l  notes.txt  parser.y
src/parser/: parser.cpp  parser.h  tokenmanager.h
src/passes/: analysispass.cpp  hoistdeclarationpass.cpp  hoistdeclarationpass.h  optimizationpass.cpp  optimizationpass.h  typeinferencepass.cpp  typeinferencepass.h
src/runtime/: CMakeLists.txt  runtime.cpp
src/test/: CMakeLists.txt  main.cpp  pdb_test.cpp  test.py  test_runner.cpp
src/test/programs/: assign_type_error.sl  basic_function_test.sl  binary_op_type_error.sl  chained_member_test.sl  comparison_type_error.sl  complex_expressions_test.sl  debug_info_pdb.sl  early_return_test.sl  empty_function_test.sl  float_test.sl  func_too_many_args_error.sl  func_wrong_arg_type_error.sl  local_access_error.sl  math.sl  method_test.sl  method_too_many_args_error.sl  method_visibility_test.sl  method_wrong_arg_type_error.sl  multiple_classes_test.sl  namespace_func_args_error.sl  namespace_test.sl  negative_numbers_test.sl  nested_calls_test.sl  nested_if_test.sl  nested_loops_test.sl  operators_test.sl  print.sl  private_field_error.sl  private_method_error.sl  redeclaration_error.sl  refcount_test.sl  return_type_error.sl  scope_test.sl  self_reference_test.sl  string_test.sl  type_error.sl  undefined_var_error.sl  unknown_class_error.sl  unknown_field_error.sl  unknown_function_error.sl  (+7 more)
triplets/: x64-windows-silver.cmake
